# ApraLinuxUtils

./: .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  PACKAGING.md  README.md  build.sh  coverage.sh  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: c-cpp.yml  documentation.yml
examples/: README.md  gpio_example.cpp  i2c_example.cpp  pwm_example.cpp  threading_example.cpp  usb_storage_example.cpp
includes/: ApraUtils.h
includes/constants/: EventCallbacks.h  I2CMessageType.h  MessageType.h  StorageState.h  StorageType.h  ThreadType.h
includes/controllers/: I2CInterface.h
includes/models/: GenericError.h  I2CError.h  I2CMessage.h  I2CTransactionMessage.h  Message.h  Range.h  StorageMinimalInfo.h
includes/utils/: FileIO.h  GPIO.h  I2CBus.h  Macro.h  Mutex.h  PWM.h  ProcessThread.h  RealHexParser.h  ScopeFunction.h  ScopeLock.h  StorageUSB.h  Utils.h
src/constants/: StorageType.cpp
src/controllers/: I2CInterface.cpp
src/models/: GenericError.cpp  I2CError.cpp  I2CMessage.cpp  I2CTransactionMessage.cpp  Message.cpp  Range.cpp  StorageMinimalInfo.cpp
src/utils/: FileIO.cpp  GPIO.cpp  I2CBus.cpp  Mutex.cpp  PWM.cpp  ProcessThread.cpp  RealHexParser.cpp  ScopeFunction.cpp  ScopeLock.cpp  StorageUSB.cpp  Utils.cpp
tests/: main_test.cpp
tests/mocks/: MockHardware.h
tests/unit/: test_file_io.cpp  test_generic_error.cpp  test_gpio.cpp  test_i2c_error.cpp  test_i2c_message.cpp  test_message.cpp  test_mutex.cpp  test_pwm.cpp  test_range.cpp  test_real_hex_parser.cpp  test_scope_function.cpp  test_scopelock.cpp  test_storage_minimal_info.cpp  test_utils.cpp
